signin page and navbar(css overlap issue)

--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -1,24 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+body {
+    margin:0;
+}
+
+svg {
+    fill:#fbfeb2;
+    height: 20px;
+    width: 20px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .navbar {
     display: flex;
-    background-color: #white;
-    padding: 8px;
-    text-align: right;
-    list-style:none;
+    background-color: #74e0aa;
+    padding: 8px 12px;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.nav-logoword {
+    color:#FCFFE0;
+    font-family: "Bebas Neue", sans-serif;
+    font-size:24px;
 }
 
 .login{
-    color: #DFD0B8;
+    color: #FCFFE0;
+    font-family: "Bebas Neue", sans-serif;
+    font-size:20px;
     justify-content: end;
     margin: 8px;
     text-decoration: none;
 }
+
 .navbar-menu{
     color: #DFD0B8;
-    justify-content: left;
-    margin: 8px;
-    text-decoration: none;
+    font-family: "Bebas Neue", sans-serif;
+    font-size:30px;
+    display: flex;
+    list-style: none;
+    padding-left: 0;
 }
 
-.logo{
-    height: 50px;
+.navbar-menu li{
+    padding: 8px 11px;
+}
+
+.navbar-menu li:hover{
+    background-color: #FCFFE0;
+    border-radius: 4px;
+}
+
+@media screen and (max-width:760px) {
+    .navbar {
+        flex-direction: column;
+        padding: 8px 12px;
+    }
+
+    .navbar-menu {
+        flex-direction: column;
+        align-items: center;
+    }
 }
